--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main class="main-container">
             <div class="scene">
                 <div class="card">
-                    <div class="card__front">
+                    <div class="card_front">
                         <img src="images/logo_transparent.png" class="business_logo">
                         <div class="card_holder">
                             <div class="name">Li Ler Voon</div>
@@ -35,15 +35,15 @@
                         <div class="title">I speak</div>
                         <div class="horizontal_line"></div>
                         <div class="languages">
-                            <img src="images/html_logo.jpg">
-                            <img src="images/css logo.png">
-                            <img src="images/python_logo.jpg">
-                            <img src="images/javascript_logo.jpg">
+                            <img src="images/css_nonTransparent.png">
+                            <img src="images/html_logo2.png">
+                            <img src="images/js_logo.png">
+                            <img src="images/python_logo2.png">
                         </div>
                     </div><!--End Card Back-->
                 </div><!--End Card-->
             </div>
         </main>
     </body>    
-    <script src="js/script.js"></script> 
+    <script src="script.js"></script> 
 </html>
